# json-c

./: .gitmodules  CMakeLists.txt  LICENSE.txt  build_lib_mingw.bat
examples/file_parsing/: CMakeLists.txt  example JSON tree visualization.drawio  example.json  file_parsing.c
include/: json-c.h
src/core/: json-c_linked_list.c  json-c_linked_list.h  json-c_tree.c  json-c_tree.h  json-c_types.h  json-c_utils.c  json-c_utils.h
src/deserializer/: json-c_deserializer.h
src/parser/: json-c_parser.c  json-c_parser.h
src/serializer/: json-c_serializer.h
tests/: CMakeLists.txt
tests/linked_list_test/: CMakeLists.txt  json-c_linked_list_test.c
tests/tree_test/: CMakeLists.txt  json-c_tree_test.c
